<resources>
    <string name="app_name">SDAH</string>

    <string name="blank" />

    <string name="menu_donate">Donate</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_featured">Featured</string>
    <string name="menu_help_feedback">Help &amp; Feedback</string>
    <string name="menu_hymnal">Hymnal</string>
    <string name="menu_night_mode">Night Mode</string>
    <string name="menu_old_hymnal">Old Hymnal</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_topical_index">Topical Index</string>

    <string name="permission_location_rationale">Location permission is needed to show the Sabbath Times.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>

    <string name="sabbath_date_time">%1$s&lt;br/&gt;Sabbath begins&lt;br/&gt;&lt;b>%2$s&lt;/b></string>
    <string name="sabbath_greeting">Happy Sabbath!</string>
</resources>
